[gd_scene load_steps=6 format=3 uid="uid://bpqk7yg8hx2w3"]

[ext_resource type="PackedScene" uid="uid://qbmx03iibuuu" path="res://addons/godot-xr-tools/staging/scene_base.tscn" id="1_base"]
[ext_resource type="Script" uid="uid://0rwrif23d50d" path="res://commons/managers/LabManager.gd" id="2_lab_manager"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_lab"]
sky_top_color = Color(0.1, 0.3, 0.6, 1)
sky_horizon_color = Color(0.8, 0.6, 0.4, 1)
ground_bottom_color = Color(0.6, 0.4, 0.2, 1)
ground_horizon_color = Color(0.7, 0.5, 0.3, 1)

[sub_resource type="Sky" id="Sky_lab"]
sky_material = SubResource("ProceduralSkyMaterial_lab")

[sub_resource type="Environment" id="Environment_lab"]
background_mode = 2
sky = SubResource("Sky_lab")
ambient_light_source = 3
ambient_light_energy = 0.5
tonemap_mode = 2
tonemap_exposure = 0.8

[node name="Lab" instance=ExtResource("1_base")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="0"]
environment = SubResource("Environment_lab")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." index="1"]
transform = Transform3D(-0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, 0.5, -0.5, 0, 5, 0)
light_energy = 0.8
shadow_enabled = true

[node name="XROrigin3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="LabManager" type="Node3D" parent="." index="3"]
script = ExtResource("2_lab_manager")

[node name="LabTable" type="StaticBody3D" parent="LabManager" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="TableMesh" type="MeshInstance3D" parent="LabManager/LabTable" index="0"]

[node name="ArtifactPedestals" type="Node3D" parent="LabManager" index="1"]

[node name="Pedestal1" type="StaticBody3D" parent="LabManager/ArtifactPedestals" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2)

[node name="Pedestal2" type="StaticBody3D" parent="LabManager/ArtifactPedestals" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Pedestal3" type="StaticBody3D" parent="LabManager/ArtifactPedestals" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2)

[node name="SequencePortals" type="Node3D" parent="LabManager" index="2"]

[node name="ArrayTutorialPortal" type="Area3D" parent="LabManager/SequencePortals" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LabManager/SequencePortals/ArrayTutorialPortal" index="0"]

[node name="PortalMesh" type="MeshInstance3D" parent="LabManager/SequencePortals/ArrayTutorialPortal" index="1"]

[node name="Label3D" type="Label3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -2)
text = "Ada Research Lab - Sequence Hub"
